src/objects/CBL2_Farmer__c.object
<CustomObject>
    <description>CBL2_Farmer object replaced CBL_Coffebaseliine, CBL_Socioeconomic, CBL_attitude, CBL_service, CBL_commercialization</description>
    <fields>
        <fullName>LAC_Farmer_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAC_Farmer_Details</label>
        <referenceTo>LAC_Farmer_Details__c</referenceTo>
        <relationshipLabel>LAC_Farmer_Details</relationshipLabel>
        <relationshipName>LAC_Farmer_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_Actitud__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission_Actitud</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL2_Farmers_Submission_Actitud</relationshipLabel>
        <relationshipName>CBL2_Farmers_Submission_Actitud</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_Comercializacion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission_Comercializacion</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL2_Farmers_Submission_Comercializacion</relationshipLabel>
        <relationshipName>CBL2_Farmers_Submission_Comercializacion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_PPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission_PPI</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL2_Farmers_Submission_PPI</relationshipLabel>
        <relationshipName>CBL2_Farmers_Submission_PPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_Registro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission_Registro</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL2_Farmers_Submission_Registro</relationshipLabel>
        <relationshipName>CBL2_Farmers_Submission_Registro</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_SegAlim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission_SegAlim</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL2_Farmers_Submission_SegAlim</relationshipLabel>
        <relationshipName>CBL2_Farmers_Submission_SegAlim</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_Servicios__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission_Servicios</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL2_Farmers_Submission_Servicios</relationshipLabel>
        <relationshipName>CBL2_Farmers_Submission_Servicios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission_SocioE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission_SocioE</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL2_Farmers_Submission_SocioE</relationshipLabel>
        <relationshipName>CBL2_Farmers_Submission_SocioE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL2_Farmers_Submission</relationshipLabel>
        <relationshipName>CBL2_Farmers_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>attitude_chooseToBeFarmer__c</fullName>
        <label>attitude_chooseToBeFarmer</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>attitude_destinedToBeFarmer__c</fullName>
        <label>attitude_destinedToBeFarmer</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>attitude_discussMethodsWOthers__c</fullName>
        <label>attitude_discussMethodsWOthers</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>attitude_effortInAgriculturePays__c</fullName>
        <label>attitude_effortInAgriculturePays</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>attitude_farmersLifeWillBeBetter__c</fullName>
        <label>attitude_farmersLifeWillBeBetter</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>attitude_futureCoffeePlans__c</fullName>
        <label>attitude_futureCoffeePlans</label>
        <picklist>
            <picklistValues>
                <fullName>Comprar tierras para sembrarlas de café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sembrar café en tierras que ya tiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mejorar tecnificación de su plantación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inversiones en su beneficio húmedo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vender parte o todo su cultivo de café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustituir el café por otro cultivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No realizará cambios</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>attitude_happyToBeFarmer__c</fullName>
        <label>attitude_happyToBeFarmer</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>attitude_limitationsCauses__c</fullName>
        <label>attitude_limitationsCauses</label>
        <picklist>
            <picklistValues>
                <fullName>No tengo suficientes recursos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta tiempo para dedicarme al cafetal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta de conocimiento técnico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>attitude_neighborsProductivityLvl__c</fullName>
        <label>attitude_neighborsProductivityLvl</label>
        <picklist>
            <picklistValues>
                <fullName>Productividad alta comparado a conocidos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Productividad similar a conocidos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menor comparado a conocidos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>attitude_payForAgriAdvise__c</fullName>
        <label>attitude_payForAgriAdvise</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>attitude_productivityImprovmntLimitation__c</fullName>
        <label>attitude_productivityImprovmntLimitation</label>
        <picklist>
            <picklistValues>
                <fullName>Plantación muy vieja (más de 25 años)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variedad no adecuada para la zona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mala calidad de plantía (almácigo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta de fertilizante</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plagas y enfermedades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clima no favorable para el café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>attitude_productivityTrend5Years__c</fullName>
        <label>attitude_productivityTrend5Years</label>
        <picklist>
            <picklistValues>
                <fullName>La productividad se incrementó</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La productividad permanece estable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La productividad ha disminuido</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>attitude_takeAdvise__c</fullName>
        <label>attitude_takeAdvise</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>attitude_wishChildrenBecomeFarmers__c</fullName>
        <label>attitude_wishChildrenBecomeFarmers</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>attitude_worthInvestingMoneyTimeAgr__c</fullName>
        <label>attitude_worthInvestingMoneyTimeAgr</label>
        <picklist>
            <picklistValues>
                <fullName>Muy en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ni de acuerdo o en desacuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De algún modo de acuerdo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy de acuerdo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>baselineName__c</fullName>
        <label>baselineName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commer_bargainingPower__c</fullName>
        <label>commer_bargainingPower</label>
        <picklist>
            <picklistValues>
                <fullName>Bajo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>commer_buysCoffee__c</fullName>
        <label>commer_buysCoffee</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>commer_coffeePlantedAreaNonRegFarmsUnit__c</fullName>
        <label>commer_coffeePlantedAreaNonRegFarmsUnit</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>commer_coffeePlantedAreaNonRegisteredFar__c</fullName>
        <label>commer_coffeePlantedAreaNonRegisteredFar</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>commer_enoughInformation__c</fullName>
        <label>commer_enoughInformation</label>
        <picklist>
            <picklistValues>
                <fullName>Precios del café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formación del precio del café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tendencia del mercado de café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuentes de información sobre el mercado</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>commer_farmsNotRegisteredInCoop__c</fullName>
        <label>commer_farmsNotRegisteredInCoop</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>commer_lastHarvestPercCoffeeSoldToCoop__c</fullName>
        <label>commer_lastHarvestPercCoffeeSoldToCoop</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>commer_producedCoffeeDestiny__c</fullName>
        <label>commer_producedCoffeeDestiny</label>
        <picklist>
            <picklistValues>
                <fullName>En la organización donde es socio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A un intermediario/prestamista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A un intermediario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directamente a un exportador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra Cooperativa o asociación</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>commer_reasonNotAllCoffeeSoldToCoop__c</fullName>
        <label>commer_reasonNotAllCoffeeSoldToCoop</label>
        <picklist>
            <picklistValues>
                <fullName>No cumple con requerimientos de calidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros compradores tienen mejor precio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros compradores pagan más rápido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Por pago de deudas/anticipos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Áreas de café no registradas en la org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>commer_reasonsNonRegisteredCoopFarms__c</fullName>
        <label>commer_reasonsNonRegisteredCoopFarms</label>
        <picklist>
            <picklistValues>
                <fullName>No cumple con requerimientos de calidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple requisitos de certificación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café comprometido con otro comprador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distancia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Están registradas en otra organización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>commer_statusSoldCoffee__c</fullName>
        <label>commer_statusSoldCoffee</label>
        <picklist>
            <picklistValues>
                <fullName>Cereza/Uva/fruta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pergamino oreado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pergamino seco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_FS_Chronic_score__c</fullName>
        <formula>if(text(food_howOftenWorried__c)=&quot;Muy rara vez&quot;,0,if(text(food_worriedBuyingFood__c)=&quot;Sí&quot;,1,0))
+if(text( food_howOfterNotEnoughFood__c )=&quot;Muy rara vez&quot;,0,if(text(food_notEnoughFoodLackMoney__c)=&quot;Sí&quot;,1,0))
+if(text( food_howOftenAteTheSame__c )=&quot;Muy rara vez&quot;,0,if(text(food_ateTheSameLackMoney__c)=&quot;Sí&quot;,1,0))
+if(text( food_howOftenLessFood__c )=&quot;Muy rara vez&quot;,0,if(text(food_lessFoodLackMoney__c)=&quot;Sí&quot;,1,0))
+if(text( food_howOftenSkippedMeals__c )=&quot;Muy rara vez&quot;,0,if(text(food_skippedMealsLackMoney__c)=&quot;Sí&quot;,1,0))
+if(text( food_howOftenAteLessFood__c )=&quot;Muy rara vez&quot;,0,if(text(food_thinkAteLessFood__c)=&quot;Sí&quot;,1,0))
+if(text( food_howOftenHungryDidntAte__c )=&quot;Muy rara vez&quot;,0,if(text(food_hungryDidnEatLackMoney__c)=&quot;Sí&quot;,1,0))
+if(text(food_lostWeightLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text( food_howOftenStoppedEating__c )=&quot;Muy rara vez&quot;,0,if(text(food_stoppedEatingLackMoney__c)=&quot;Sí&quot;,1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>food_FS - Chronic score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>food_FS_Prevalence_score__c</fullName>
        <formula>if(text(food_worriedBuyingFood__c)=&quot;Sí&quot;,1,0)
+if(text(food_notEnoughFoodLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text(food_ateTheSameLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text(food_lessFoodLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text(food_skippedMealsLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text(food_thinkAteLessFood__c)=&quot;Sí&quot;,1,0)
+if(text(food_hungryDidnEatLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text(food_lostWeightLackMoney__c)=&quot;Sí&quot;,1,0)
+if(text(food_stoppedEatingLackMoney__c)=&quot;Sí&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>food_FS - Prevalence score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>food_Food_security_status_chronic__c</fullName>
        <formula>if( food_FS_Chronic_score__c &lt; 3, &quot;Food-secure&quot;, if (food_FS_Chronic_score__c &lt;6,&quot;Moderately food-insecure&quot;, &quot;Severely food-insecure&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>food_Food security status (chronic)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>food_Food_security_status_prevalence__c</fullName>
        <formula>if( food_FS_Prevalence_score__c &lt; 3, &quot;Food-secure&quot;, if (food_FS_Prevalence_score__c&lt;6,&quot;Moderately food-insecure&quot;, &quot;Severely food-insecure&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>food_Food security status (prevalence)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>food_ateTheSameLackMoney__c</fullName>
        <label>food_ateTheSameLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_howOftenAteLessFood__c</fullName>
        <label>food_howOftenAteLessFood</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_howOftenAteTheSame__c</fullName>
        <label>food_howOftenAteTheSame</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_howOftenHungryDidntAte__c</fullName>
        <label>food_howOftenHungryDidntAte</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_howOftenLessFood__c</fullName>
        <label>food_howOftenLessFood</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_howOftenSkippedMeals__c</fullName>
        <label>food_howOftenSkippedMeals</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_howOftenStoppedEating__c</fullName>
        <label>food_howOftenStoppedEating</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_howOftenWorried__c</fullName>
        <label>food_howOftenWorried</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_howOfterNotEnoughFood__c</fullName>
        <label>food_howOfterNotEnoughFood</label>
        <picklist>
            <picklistValues>
                <fullName>Seguido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muy rara vez</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_hungryDidnEatLackMoney__c</fullName>
        <label>food_hungryDidnEatLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_lessFoodLackMoney__c</fullName>
        <label>food_lessFoodLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_lostWeightLackMoney__c</fullName>
        <label>food_lostWeightLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_notEnoughFoodLackMoney__c</fullName>
        <label>food_notEnoughFoodLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_skippedMealsLackMoney__c</fullName>
        <label>food_skippedMealsLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_stoppedEatingLackMoney__c</fullName>
        <label>food_stoppedEatingLackMoney</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_thinkAteLessFood__c</fullName>
        <label>food_thinkAteLessFood</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>food_worriedBuyingFood__c</fullName>
        <label>food_worriedBuyingFood</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ppi_150_Nacional_Score__c</fullName>
        <label>ppi_150_Nacional_Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppi_1_25_Score__c</fullName>
        <label>ppi_1_25_Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppi_200_Nacional_Score__c</fullName>
        <label>ppi_200_Nacional_Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppi_2_50_Score__c</fullName>
        <label>ppi_2_50_Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppi_3_75_Scores__c</fullName>
        <label>ppi_3_75_Scores</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppi_5_00_Score__c</fullName>
        <label>ppi_5_00_Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppi_Alimentaria_Score__c</fullName>
        <label>ppi_Alimentaria_Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppi_Extrema_USAID_Score__c</fullName>
        <description>ppi_Extrema_USAID_Score calculated in a workflow rule</description>
        <label>ppi_Extrema_USAID_Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>